--- a/community/templates/community/post_detail.html
+++ b/community/templates/community/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'army_vacation/base.html' %}
+{% extends 'community/base.html' %}
 
 {% block content %}
     <div class="post">
@@ -12,5 +12,10 @@
 		{% endif %}
 		<h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
+        {% for comment in comments %}
+        <p>
+            {{comment.text}}
+        </p>
+        {% endfor %}
 	</div>
 {% endblock %}
