--- a/community/templates/community/post_edit.html
+++ b/community/templates/community/post_edit.html
@@ -1,4 +1,4 @@
-{% extends 'army_vacation/base.html' %}
+{% extends 'community/base.html' %}
 
 <a href="{% url 'post_new' %}" class="top-menu"><i class="material-icons">edit</i></a>
 {% block content%}
