--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -1,84 +1,72 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-  <html lang='ko'>
-  <head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/materialize.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-      
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="{% static 'js/materialize.min.js'%}"></script>
-    <script src="{% static 'js/base.js'%}"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    
-  </head>
-      
-<body>
-     <div class="container">
-        <ul id="slide-out" class="sidenav" style='width : 200px'>
-            <li>
-            <div class="user-view">
-              <div class="background">
-                <img src="{% static 'images/Logo.jpg' %}">
+<html lang="ko">
+    <head>
+<!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.css'%}"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="{% static 'css/base.css'%}"  media="screen,projection"/>
+      <script type="text/javascript" src="{% static 'js/materialize.js'%}"></script>
+      <script type="text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        {% block head %}
+        {% endblock %}
+    </head>
+    <body>
+        <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="{% url 'post_list' %}" class="brand-logo">모집병 도우미</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
+            <li><a href = "#" >이달의 모집계획</a></li>
+            <li><a href = "#" >통계자료</a></li>
+            <li><a href = "#" >입영준비물</a></li>
+          </ul>
+
+          <ul id="nav-mobile" class="sidenav">
+            <li><a href = "#" class="active">복무후기</a></li>
+            <li><a href = "#" >이달의 모집계획</a></li>
+            <li><a href = "#" >통계자료</a></li>
+            <li><a href = "#" >입영준비물</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+        </nav>
+        
+        <div class="container">
+        {% block content %}
+        {% endblock %}
+        </div>
+
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col s12">
+                <h5 class="white-text">Made By HyunUk</h5>
+                <p class="grey-text text-lighten-4">주말 갈갈갈해서 만들었습니다. 대략 8시간은 작업한듯... 일욜하루만... 허리야..</p>
               </div>
-            {% if user.is_authenticated %}
-              <a href="/account"><span class="white-text name">{{user.name}}</span></a>
-              <a href="/account"><span class="white-text email">{{user.email}}</span></a>
-            {% else %}
-                <a href="/account/login"><span class="white-text name">로그인을 해주세요</span></a>
-            {% endif %}
+              
             </div>
-            </li>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
 
-            <!--<li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li> -->
-            <!--
-            <li><div class="divider"></div></li>
-            <li><a class="subheader">휴가</a></li>
-            <li><a class="waves-effect" a href="/handbook">휴가 핸드북</a></li>
-            <li><a class="waves-effect" a href="/questionaire">3일 문진표</a></li>
-            <li><a class="waves-effect" a href='/'>전우들의 휴가</a></li>
-             -->
-            <li><div class="divider"></div></li>
-            <li><a class="subheader">병영생활</a></li>
-            <li><a class="waves-effect" a href="/food">오늘의 밥</a></li>
-            <li><a class="waves-effect" a href="/worker">불침번 근무</a></li>
-            <li><a class="waves-effect" a href="/washdish">식기 근무</a></li>
-            <li><a class="waves-effect" a href="/blog">전파 사항</a></li>
-        </ul>
-        <div class="row header">
-            <div class="col s2 center">
-                <a href="#" data-target="slide-out" class="sidenav-trigger" ><i class="material-icons md-48">menu</i></a>
-                </div>
-
-                <div class="col s8 center" style="text-align : center">
-                    <a href="/" style="color:black">
-                    <h2>
-                        B2 매니저
-                    </h2>
-                    </a>
-                    
-                </div>
-
-                <div class="col s2 center">
-                    <img src= "{% static 'images/Logo.jpg' %}" style="width : 100%; max-width : 120px; ">
-                </div>
-
-
-        </div>
-        <div class = "content">
-            {% block content %}
-            {% endblock %}
-        </div> 
         
-        <div class="footer">
-            <h9>
-                made by 노현욱
-            </h9>
-        </div>
-    </div>
-        
-
-</body>
-</html>
+        <script type="text/javascript" src="{% static 'js/materialize.min.js'%}"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>         
+        <script type="text/javascript" src="{% static 'js/materialize.js'%}"></script>
+        <script>
+        $(document).ready(function(){
+            $('.sidenav').sidenav();
+          });
+        </script>
+      <!--JavaScript at end of body for optimized loading-->
+    </body>
+  </html>
