--- a/account/templates/account/info.html
+++ b/account/templates/account/info.html
@@ -1,4 +1,4 @@
-{% extends 'army_vacation/base.html' %}
+{% extends 'community/base.html' %}
 
 {% block title %}<title>사용자 정보</title>{% endblock %}
 
