--- a/community/templates/community/post_list.html
+++ b/community/templates/community/post_list.html
@@ -2,17 +2,24 @@
 
             
 {% block content %}
-<a href="{% url 'post_new' %}" class="top-menu"><i class="large material-icons">add</i></a>
-    {% if user.is_authenticated %}
-	{% for post in posts %}
-		<div class="post">
-            <h4><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h4>
-			<div class="date">
-				<h8>published: {{ post.published_date}}</h8>
-			</div>
-			
-			<p>{{ post.text|linebreaks }}</p>
-		</div>	
+<div class="row">
+{% for post in posts %}
+        <div class="col s6 m4 l3">
+          <div class="card blue-grey darken-1 small">
+            <div class="card-content white-text">
+              <span class="card-title truncate">{{ post.title }}</span>
+                    <p>
+                    {{post.text|linebreaks}}
+                    </p> 
+            </div>
+            <div class="card-action">
+              <a href="{% url 'post_detail' pk=post.pk %}">자세히</a>
+            </div>
+          </div>
+        </div>
 	{% endfor %}
+{% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu"><i class="large material-icons">add</i></a>
     {% endif %}
+</div>
 {% endblock %}
