--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -21,14 +21,14 @@
           <ul class="right hide-on-med-and-down">
             <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
-            <li><a href = "#" >통계자료</a></li>
+            <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
             <li><a href = "#" >입영준비물</a></li>
           </ul>
 
           <ul id="nav-mobile" class="sidenav">
-            <li><a href = "#" class="active">복무후기</a></li>
+            <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
-            <li><a href = "#" >통계자료</a></li>
+            <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
             <li><a href = "#" >입영준비물</a></li>
           </ul>
           <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
