making prepare list

--- a/account/templates/account/info.html
+++ b/account/templates/account/info.html
@@ -3,8 +3,10 @@
 {% block title %}<title>사용자 정보</title>{% endblock %}
 
 {% block content %}
-
-{{user.email}}
+{{user.name}}<br>
+{{user.email}}<br>
+{{user.date_of_birth}}<br>
+{{user.date_of_join}}<br>
 
 
 {% endblock content %}
