--- a/community/templates/community/post_list.html
+++ b/community/templates/community/post_list.html
@@ -13,7 +13,7 @@
                     </p> 
             </div>
             <div class="card-action">
-              <a href="{% url 'post_detail' pk=post.pk %}">자세히</a>
+              <a href="{% url 'post_detail' pk=post.pk %}">μμΈν</a>
             </div>
           </div>
         </div>
