--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -19,17 +19,31 @@
         <div class="nav-wrapper container">
           <a id="logo-container" href="{% url 'post_list' %}" class="brand-logo">모집병 도우미</a>
           <ul class="right hide-on-med-and-down">
+            <li>
+            {% if user.is_authenticated %}
+              <a href="/account"><span class="black-text name">{{user.name}}님</span></a>
+            {% else %}
+                <a href="/account/login"><span class="white-text name">로그인</span></a>
+            {% endif %}
+              </li>
             <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
             <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
-            <li><a href = "#" >입영준비물</a></li>
+            <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
 
           <ul id="nav-mobile" class="sidenav">
+            <li>
+            {% if user.is_authenticated %}
+              <a href="/account"><span class="black-text name">{{user.name}}님</span></a>
+            {% else %}
+                <a href="/account/login"><span class="black-text name">로그인</span></a>
+            {% endif %}
+              </li>
             <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
             <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
-            <li><a href = "#" >입영준비물</a></li>
+            <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
           <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
