making chart n chartdata model

--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -28,7 +28,7 @@
               </li>
             <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
-            <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
+            <li><a href = "{% url 'service_list' %}" >통계자료</a></li>
             <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
 
@@ -42,7 +42,7 @@
               </li>
             <li><a href = "{% url 'post_list' %}" class="active">복무후기</a></li>
             <li><a href = "#" >이달의 모집계획</a></li>
-            <li><a href = "{% url 'cutline' %}" >통계자료</a></li>
+            <li><a href = "{% url 'service_list' %}" >통계자료</a></li>
             <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
           <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
