--- a/serviceapply/templates/serviceapply/service_list.html
+++ b/serviceapply/templates/serviceapply/service_list.html
@@ -3,23 +3,20 @@
             
 {% block content %}
 <div class="row">
-{% for post in posts %}
+{% for service in services %}
         <div class="col s6 m4 l3">
           <div class="card blue-grey darken-1 small">
             <div class="card-content white-text">
-              <span class="card-title truncate">{{ post.title }}</span>
+              <span class="card-title truncate">{{ service.title }}</span>
                     <p>
-                    {{post.text|linebreaks}}
+                    {{service.text|linebreaks}}
                     </p> 
             </div>
             <div class="card-action">
-              <a href="{% url 'post_detail' pk=post.pk %}">more</a>
+              <a href="{% url 'service_detail' pk=service.pk %}">more</a>
             </div>
           </div>
         </div>
 	{% endfor %}
-{% if user.is_authenticated %}
-<a href="{% url 'post_new' %}" class="top-menu"><i class="large material-icons">add</i></a>
-    {% endif %}
 </div>
 {% endblock %}
