--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="panel panel-default registration">
     <div class="panel-heading">
-        로그인하기
+        로그인하기 dddd
     </div>
     <div class="panel-body">
         <form action="." method="post">
@@ -29,4 +29,5 @@
         </form>
     </div>
 </div>
+ <button class="btn btn-primary btn-large" type="button" onclick="location.href={% url 'sign_in' %}' ">회원가입</button>
 {% endblock content %}
