adding rate model

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -3,6 +3,7 @@
 {% block title %}<title>로그인</title>{% endblock %}
 
 {% block content %}
+<div class="container">
 <div class="panel panel-default registration">
     <div class="panel-heading">
         로그인하기 dddd
@@ -30,4 +31,5 @@
     </div>
 </div>
  <button class="btn btn-primary btn-large" type="button" onclick="location.href={% url 'sign_in' %}' ">회원가입</button>
+</div>
 {% endblock content %}
