--- a/community/templates/community/cutline.html
+++ b/community/templates/community/cutline.html
@@ -1,6 +1,7 @@
 {% extends 'community/base.html' %}
 
 {% block content %}
+<div class="container">
 <div class="row">
 <script>
 var datas = {{data}};
@@ -45,5 +46,6 @@ chart.render();
         <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     </div>
     
+</div>
 </div>
 {% endblock %}
