--- a/serviceapply/templates/serviceapply/service_detail.html
+++ b/serviceapply/templates/serviceapply/service_detail.html
@@ -2,6 +2,8 @@
 
             
 {% block content %}
+<div class="container">
+    
 <div class="row">
     <div class="col offset-l2 l8 s12">
         <h1>{{ service.title }}</h1>
@@ -41,4 +43,5 @@ chart.render();
         <div id="chartContainer" style="height: 370px; width: 100%; margin-top:20px;"></div>
         <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     </div>
+</div>
 {% endblock %}
