--- a/account/templates/account/info.html
+++ b/account/templates/account/info.html
@@ -3,10 +3,11 @@
 {% block title %}<title>사용자 정보</title>{% endblock %}
 
 {% block content %}
+<div class="container">
 {{user.name}}<br>
 {{user.email}}<br>
 {{user.date_of_birth}}<br>
 {{user.date_of_join}}<br>
-
-
+    
+</div>
 {% endblock content %}
