--- a/account/templates/account/sign_in.html
+++ b/account/templates/account/sign_in.html
@@ -1,6 +1,7 @@
 {% extends 'community/base.html' %}
 
 {% block content %}
+<div class="container">
 <form method="POST" class="post-form">
     {% csrf_token %}
     <style>
@@ -11,4 +12,5 @@
     {{ form.as_p }}
     <button type="submit" class="save btn btn-default">Save</button>
     </form>
+</div>
 {% endblock %}
