--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -3,6 +3,8 @@
 {% block title %}<title>로그인</title>{% endblock %}
 
 {% block content %}
+
+<div class="container">
 <div class="panel panel-default registration">
     <div class="panel-heading">
         로그인하기
@@ -22,7 +24,11 @@
             <div class="form-actions">
                 <button class="btn btn-primary btn-large" type="submit">로그인하기</button>
             </div>
+                <button >
+                    회원가입
+            </button>
         </form>
     </div>
+</div>
 </div>
 {% endblock content %}
