--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+        <meta charset="utf-8">
 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
@@ -15,6 +16,7 @@
         {% endblock %}
     </head>
     <body>
+        <div class="navbar-fixed">
         <nav class="white" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="{% url 'post_list' %}" class="brand-logo">모집병 도우미</a>
@@ -31,8 +33,11 @@
             <li><a href = "{% url 'service_list' %}" >통계자료</a></li>
             <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
-
-          <ul id="nav-mobile" class="sidenav">
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+        </nav>
+        </div>
+            <ul id="nav-mobile" class="sidenav">
             <li>
             {% if user.is_authenticated %}
               <a href="/account"><span class="black-text name">{{user.name}}님</span></a>
@@ -45,14 +50,10 @@
             <li><a href = "{% url 'service_list' %}" >통계자료</a></li>
             <li><a href = "{% url 'prepare' %}" >입영준비물</a></li>
           </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
-        </nav>
         
-        <div class="container">
+
         {% block content %}
         {% endblock %}
-        </div>
 
         <footer class="page-footer">
           <div class="container">
