--- a/community/templates/community/post_detail.html
+++ b/community/templates/community/post_detail.html
@@ -1,6 +1,7 @@
 {% extends 'community/base.html' %}
 
 {% block content %}
+<div class="container">
     <div class="post">
         <div class="row">
 		
@@ -46,7 +47,8 @@
             </p>
             {% endfor %}
         </div>
-        
+            <a class="btn btn-large" href="{% url 'post_like' post.pk %}">좋아요!!</a>
         </div>
 	</div>
+</div>
 {% endblock %}
