--- a/community/templates/community/post_edit.html
+++ b/community/templates/community/post_edit.html
@@ -1,6 +1,12 @@
 {% extends 'community/base.html' %}
+
 {% load static %}
+
+<div class="container">
+
 <link type="text/css" rel="stylesheet" href="{% static 'css/post_edit.css'%}"  media="screen,projection"/>
+<div class="row">
+    <div class="col s12">
 <a href="{% url 'post_new' %}" class="top-menu"><i class="material-icons">edit</i></a>
 {% block content%}
 	<h3>전파사항 추가</h3>
@@ -8,4 +14,9 @@
 		{{ form.as_p }}
 		<button type="submit" class="save btn btn-default">Save</button>
 	</form>
+        
+    </div>
+    </div>
+    
+</div>
 {% endblock %}
