--- a/community/templates/community/post_list.html
+++ b/community/templates/community/post_list.html
@@ -1,25 +1,65 @@
 {% extends 'community/base.html' %}
-
-            
+{% load static %}
 {% block content %}
+
+<div class="container">
+<!-- 한줄 띄기 -->
+<div class="row"> </div>
+<!-- 원하는 모집병 후기 종류 선택 버튼 -->
 <div class="row">
-{% for post in posts %}
-        <div class="col s6 m4 l3">
-          <div class="card blue-grey darken-1 small">
-            <div class="card-content white-text">
-              <span class="card-title truncate">{{ post.title }}</span>
-                    <p>
+    <div class="col s12 m12 l12 ">
+    {% for service in services %}
+        <a href="{% url 'post_list' service.title %}" class="waves-effect waves-light btn">{{service.title}}</a>
+    {% endfor %}
+    </div>
+</div>
+    
+    <script>
+    function myFun(pk) {
+    
+    $.get('{% url "post_like" %}'+pk,{},function(ret) {
+        
+        $('#'+pk+'result').html(ret);
+        
+        return ret;
+        
+    });
+    }
+    </script>
+    
+
+<!-- 모집병 후기 리스트 -->
+<div class="row">
+    <div class="col s12 m12 l12">
+        <ul class="collapsible">  
+        {% for post in posts %}  
+            <li>
+                <div class="collapsible-header">{{ post.title }}</div>
+                <div class="collapsible-body">
                     {{post.text|linebreaks}}
-                    </p> 
-            </div>
-            <div class="card-action">
-              <a href="{% url 'post_detail' pk=post.pk %}">more</a>
-            </div>
-          </div>
-        </div>
-	{% endfor %}
+                    <br>
+                    <div id="{{post.pk}}result">
+                        {{post.like}}
+                    </div>
+                    <br>
+                    <!-- 좋아요 버튼 -->
+                    <button class="btn btn-small" onclick="myFun({{post.pk}});">
+                        <i class="small material-icons">thumb_up</i>
+                    </button>
+                </div>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
+    
 {% if user.is_authenticated %}
-<a href="{% url 'post_new' %}" class="top-menu"><i class="large material-icons">add</i></a>
-    {% endif %}
+<div class="fixed-action-btn">
+  <a href="{% url 'post_new' %}" class="btn-floating btn-large red">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+</div>
+{% endif %}
+    <script type="text/javascript" src="{% static 'js/post_list.js'%}"></script>
 </div>
 {% endblock %}
