--- a/community/templates/community/prepare.html
+++ b/community/templates/community/prepare.html
@@ -2,6 +2,7 @@
 
             
 {% block content %}
+<div class="container">
 <div class="row">
     <div class="col s12 offset-m2 m8">
         <table>
@@ -30,4 +31,5 @@
         </table>
     </div>
 </div>
+</div>s
 {% endblock %}
