--- a/serviceapply/templates/serviceapply/service_list.html
+++ b/serviceapply/templates/serviceapply/service_list.html
@@ -2,6 +2,8 @@
 
             
 {% block content %}
+<div class="container">
+    
 <div class="row">
 {% for service in services %}
         <div class="col s6 m4 l3">
@@ -18,5 +20,6 @@
           </div>
         </div>
 	{% endfor %}
+</div>
 </div>
 {% endblock %}
