--- a/community/templates/community/post_edit.html
+++ b/community/templates/community/post_edit.html
@@ -1,15 +1,14 @@
 {% extends 'community/base.html' %}
 
 {% load static %}
+{% block content%}
 
 <div class="container">
-
 <link type="text/css" rel="stylesheet" href="{% static 'css/post_edit.css'%}"  media="screen,projection"/>
 <div class="row">
+    <div class="col s12"> </div>
     <div class="col s12">
-<a href="{% url 'post_new' %}" class="top-menu"><i class="material-icons">edit</i></a>
-{% block content%}
-	<h3>전파사항 추가</h3>
+	<h3>복무후기 수정</h3>
 	<form method="POST" class="post-form">{% csrf_token %}
 		{{ form.as_p }}
 		<button type="submit" class="save btn btn-default">Save</button>
@@ -17,6 +16,7 @@
         
     </div>
     </div>
+    
     
 </div>
 {% endblock %}
