--- a/community/templates/community/post_list.html
+++ b/community/templates/community/post_list.html
@@ -31,6 +31,11 @@
 <!-- 모집병 후기 리스트 -->
 <div class="row">
     <div class="col s12 m12 l12">
+        {% for data in datas %}
+            <p>
+            {{data}}    
+        </p>
+        {% endfor %}
         <ul class="collapsible">  
         {% for post in posts %}  
             <li>
